@@ -2,6 +2,16 @@
 
         Reviewed by Maciej.
 
+        <rdar://problem/4054590> AX: Dictionary panel does not work when page is scrolled on Safari
+
+        * kwq/KWQAccObject.mm:
+        (-[KWQAccObject doAXTextMarkerForPosition:]):
+        Add in the view's contentsX and contentsY to the point.
+
+2005-03-16  David Harrison  <harrison@apple.com>
+
+        Reviewed by Maciej.
+
         <rdar://problem/4048506> Deleting from beginning of editable div deletes other document elements
         
         Also changed WebKit.
